[gd_scene load_steps=10 format=3 uid="uid://cwwekbcfo4hgu"]

[ext_resource type="Script" uid="uid://beiwt1l5yk3ny" path="res://user_interface/game_over.gd" id="1_bkg1s"]
[ext_resource type="Theme" uid="uid://bi4882lo6q8km" path="res://user_interface/ThemeV2.tres" id="2_adlvt"]
[ext_resource type="FontFile" uid="uid://b01tc6c8f4r8e" path="res://user_interface/Sprout Lands - UI Pack - Basic pack/fonts/pixelFont-7-8x14-sproutLands.ttf" id="3_12xn0"]
[ext_resource type="Texture2D" uid="uid://by6ovf6y7qwd6" path="res://user_interface/ui_assets/Button_52x14.png" id="3_adlvt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ovv2v"]
texture = ExtResource("3_adlvt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tan1r"]
texture = ExtResource("3_adlvt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_up85o"]
texture = ExtResource("3_adlvt")
expand_margin_left = 40.0
expand_margin_right = 40.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_adlvt"]
texture = ExtResource("3_adlvt")
expand_margin_left = 40.0
expand_margin_right = 40.0

[sub_resource type="Theme" id="Theme_67nrg"]
Button/colors/font_color = Color(0.2, 0.12941177, 0.007843138, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("3_12xn0")
Button/styles/disabled = SubResource("StyleBoxTexture_ovv2v")
Button/styles/focus = SubResource("StyleBoxTexture_tan1r")
Button/styles/hover = SubResource("StyleBoxTexture_up85o")
Button/styles/normal = SubResource("StyleBoxTexture_adlvt")
Button/styles/pressed = SubResource("StyleBoxTexture_adlvt")

[node name="GameOver" type="CanvasLayer"]
layer = 4
script = ExtResource("1_bkg1s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WastedPanel" type="Panel" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme = ExtResource("2_adlvt")

[node name="WastedLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/WastedPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "WASTED"

[node name="Scoreboard" type="Panel" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_adlvt")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_right = 28.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 40

[node name="Score_" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_adlvt")
theme_override_font_sizes/font_size = 64
text = "SCORE:"

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 80

[node name="CategoriesAndScoresDivider" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider"]
layout_mode = 2

[node name="ScoreCategories" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="seconds survived" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/ScoreCategories"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_adlvt")
text = "Time survived:"

[node name="shipwrecked" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/ScoreCategories"]
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Enemies shipwrecked:"

[node name="shipwrecked2" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/ScoreCategories"]
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Bounty:"

[node name="waves_survived" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/ScoreCategories"]
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Waves Survived:"

[node name="bosses_shipwrecked" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/ScoreCategories"]
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Bosses Shipwrecked:"

[node name="Total" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/ScoreCategories"]
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Total:"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="secondsScore" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Time survived:"
horizontal_alignment = 2

[node name="shipwreckedScore" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Enemies shipwrecked:"
horizontal_alignment = 2

[node name="bountyScore" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Bounty:"
horizontal_alignment = 2

[node name="waves_survivedScore" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Waves Survived:"
horizontal_alignment = 2

[node name="bosses_shipwreckedScore" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_adlvt")
text = "Bosses Shipwrecked:"
horizontal_alignment = 2

[node name="total_score" type="Label" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_adlvt")
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer2/CategoriesAndScoresDivider"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Scoreboard"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -50.0
offset_right = 36.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 30

[node name="Restart" type="Button" parent="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = SubResource("Theme_67nrg")
text = "  Restart  "

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Scoreboard/MarginContainer3/Restart" to="." method="_on_restart_pressed"]
